# walter_description

./: CMakeLists.txt  README.md  package.xml
config/: controllers.yaml
launch/: gazebo_walter.launch.py  spawn_odom.launch.py  start_rviz.launch.py  walter_spawn.launch.py
meshes/: aro.part  aro.stl  base.part  base.stl  base_caster.part  base_caster.stl  bloque_1.part  brazo1.part  cabeza.part  camera.part  config.json  eje.part  eje_caster.part  eje_caster.stl  lidar.part  liddar.part  liddar.stl  llanta.part  llanta.stl  llanta_izquierda.part  ojo1.part  ojo2.part  pantalla.part  part_1.part  part_1.stl  part_2.part  pecho.part  pecho.stl  protector_1.part  protector_1.stl  protector_2.part  robot.urdf  tope.part  tope.stl  torso.part  varilla.part  varilla.stl
rviz/: walter.rviz
scripts/: groundtruth_broadcaster.py  improve_odometry.py
src/walter_description/: CMakeLists.txt  package.xml
urdf/: walter.xacro  walter_gazebo.xacro  walter_previo.xacro
walter_description/: package.xml
walter_description/launch/: gazebo_walter.launch.py
walter_description/meshes/: aro.part  base_caster.part  bloque_1.stl  brazo1.stl  cabeza.part  cabeza.stl  eje.stl  llanta_izquierda.part  llanta_izquierda.stl  ojo1.part  ojo1.stl  ojo2.part  ojo2.stl  pantalla.part  pantalla.stl  part_1.stl  part_2.stl  pecho.part  protector_1.part  protector_2.part  tope.part  torso.part  torso.stl  varilla.part
walter_description/urdf/: walter_gazebo.xacro  walter_previo_2.xacro
worlds/: turtlebot3_house.world
worlds/muestra/: map2.yaml  model.config  model.sdf
(+28 files in other folders)
