<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>walter_description</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="91549394+JrLuimira@users.noreply.github.com">luigi</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>ament_flake8</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <!--<gazebo_ros gazebo_media_path="${prefix}" /> -->
    <gazebo_ros gazebo_media_path="${prefix}" />
    <!-- <gazebo_ros gazebo_model_path="${prefix}/models"/> -->
    <gazebo_ros gazebo_plugin_path="${prefix}/lib" gazebo_model_path="${prefix}/.." />
  </export>


</package>